; ModuleID = '/home/carl/AnghaBench/linux/block/extr_blk-mq.c_blk_mq_start_stopped_hw_queue.c'
source_filename = "/home/carl/AnghaBench/linux/block/extr_blk-mq.c_blk_mq_start_stopped_hw_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blk_mq_hw_ctx = type { i32 }

@BLK_MQ_S_STOPPED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @blk_mq_start_stopped_hw_queue(%struct.blk_mq_hw_ctx* %0, i32 %1) #0 {
  %3 = alloca %struct.blk_mq_hw_ctx*, align 8
  %4 = alloca i32, align 4
  store %struct.blk_mq_hw_ctx* %0, %struct.blk_mq_hw_ctx** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.blk_mq_hw_ctx*, %struct.blk_mq_hw_ctx** %3, align 8
  %6 = call i32 @blk_mq_hctx_stopped(%struct.blk_mq_hw_ctx* %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  br label %17

9:                                                ; preds = %2
  %10 = load i32, i32* @BLK_MQ_S_STOPPED, align 4
  %11 = load %struct.blk_mq_hw_ctx*, %struct.blk_mq_hw_ctx** %3, align 8
  %12 = getelementptr inbounds %struct.blk_mq_hw_ctx, %struct.blk_mq_hw_ctx* %11, i32 0, i32 0
  %13 = call i32 @clear_bit(i32 %10, i32* %12)
  %14 = load %struct.blk_mq_hw_ctx*, %struct.blk_mq_hw_ctx** %3, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @blk_mq_run_hw_queue(%struct.blk_mq_hw_ctx* %14, i32 %15)
  br label %17

17:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @blk_mq_hctx_stopped(%struct.blk_mq_hw_ctx*) #1

declare dso_local i32 @clear_bit(i32, i32*) #1

declare dso_local i32 @blk_mq_run_hw_queue(%struct.blk_mq_hw_ctx*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
